<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/app_background" >

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rateapp_message"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_rate_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/rateapp_ratenow"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/rateapp_ratelater"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/rateapp_never"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>