<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_home_blur"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/primaryButtons"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_above="@+id/secondaryButtons"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btnOpenPhoto"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_button_padding"
                    android:layout_marginTop="@dimen/home_button_padding"
                    android:textColor="@color/home_text_color"
                    android:text="@string/btnChoosePhoto_text"
                    android:textSize="@dimen/home_button_text_size"
                    android:fontFamily="@string/text_font_family" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnCamera"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_btn_take_picture"
                    android:textColor="@color/home_text_color"
                    android:layout_marginBottom="@dimen/home_button_padding"
                    android:layout_marginTop="@dimen/home_button_padding"
                    android:textSize="@dimen/home_button_text_size"
                    android:fontFamily="@string/text_font_family" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/secondaryButtons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

    </RelativeLayout>
</RelativeLayout>
